--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="header">
             <h2>ToDo List</h2>
             <form>
-                <input class="form-control dateInput" type="datetime" name="datetime" id="datetime" placeholder="Deadline">
+                <input class="form-control dateInput" type="datetime" name="datetime" id="datetime" placeholder="Pick deadline">
             </form>
             <input class="toDoInput"type="text" placeholder="Type your task here...">
             <button class="addBtn">Add</button>
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <h2>Your tasks:</h2>
-            <p class="alertInfo">Add your first task!</p>
+            <p class="alertInfo fadeInAnimate">Add your first task!</p>
 
             <ul id="taskList">
             </ul>
